[project]
name = "uploaddrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11.0",
    "beautifulsoup4>=4.14.2",
    "flask>=3.1.2",
    "google>=3.0.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
]
